feat: implement booking and marketing microservices with RabbitMQ integration

--- a/.env.dist
+++ b/.env.dist
@@ -5,8 +5,8 @@ RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
 
 # Routing Keys
-LOGS_ROUTINGKEY=logs
-PROMOTIONS_ROUTINGKEY=promotions
-PAYMENT_ACCEPTED_ROUTINGKEY=payment-successfull
-PAYMENT_REJECTED_ROUTINGKEY=payment-failed
-TICKET_GENERATED_ROUTINGKEY=ticket-generated
+LOGS_ROUTING_KEY=logs
+MARKETING_ROUTING_KEY=promotions
+PAYMENT_ACCEPTED_ROUTING_KEY=payment-successfull
+PAYMENT_REJECTED_ROUTING_KEY=payment-failed
+TICKET_GENERATED_ROUTING_KEY=ticket-generated
