chore: update .env.dist with new routing key names and add payment service keys

--- a/.env.dist
+++ b/.env.dist
@@ -4,9 +4,22 @@ RABBITMQ_PASS=guest
 RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
 
-# Routing Keys
-LOGS_ROUTING_KEY=logs
-MARKETING_ROUTING_KEY=promotions
-PAYMENT_ACCEPTED_ROUTING_KEY=payment-successfull
-PAYMENT_REJECTED_ROUTING_KEY=payment-failed
-TICKET_GENERATED_ROUTING_KEY=ticket-generated
+# Queues
+LOGS_ROUTINGKEY=logs
+MARKETING_ROUTINGKEY=promotions
+PAYMENT_ACCEPTED_ROUTINGKEY=payment_accepted
+PAYMENT_REFUSED_ROUTINGKEY=payment_refused
+TICKET_GENERATED_ROUTINGKEY=ticket_generated
+BOOKING_CREATED_ROUTINGKEY=booking_created
+BOOKING_CANCELLED_ROUTINGKEY=booking_cancelled
+
+# Payments Service Keys
+PAYMENTS_SERVICE_PUBLIC_KEY=****PUBLIC_KEY_FILE_PATH****
+PAYMENTS_SERVICE_PRIVATE_KEY=****PRIVATE_KEY_FILE_PATH****
+
+# Api
+API_PORT=1234
+MARKETING_API_PORT=1235
+ITINERARY_MS_PORT=1236
+PAYMENT_MS_PORT=1237
+PAYMENTS_API_PORT=1238
