feat: implement payments microservice with payment processing and webhook integration

--- a/.env.dist
+++ b/.env.dist
@@ -5,13 +5,13 @@ RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
 
 # Queues
-LOGS_ROUTINGKEY=logs
-MARKETING_ROUTINGKEY=promotions
-PAYMENT_ACCEPTED_ROUTINGKEY=payment_accepted
-PAYMENT_REFUSED_ROUTINGKEY=payment_refused
-TICKET_GENERATED_ROUTINGKEY=ticket_generated
-BOOKING_CREATED_ROUTINGKEY=booking_created
-BOOKING_CANCELLED_ROUTINGKEY=booking_cancelled
+LOGS_ROUTING_KEY=logs
+MARKETING_ROUTING_KEY=promotions
+PAYMENT_ACCEPTED_ROUTING_KEY=payment_accepted
+PAYMENT_REJECTED_ROUTING_KEY=payment_rejected
+TICKET_GENERATED_ROUTING_KEY=ticket_generated
+BOOKING_CREATED_ROUTING_KEY=booking_created
+BOOKING_CANCELLED_ROUTING_KEY=booking_cancelled
 
 # Payments Service Keys
 PAYMENTS_SERVICE_PUBLIC_KEY=****PUBLIC_KEY_FILE_PATH****
